# docot

./: .gitignore  BUILDING.md  README.md  capacitor.config.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
android/app/: build.gradle
backend/: README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  ws.py
backend/app/routers/: auth.py  calls.py  chats.py  events.py  folders.py  invites.py  keys.py  link_preview.py  notes.py  polls.py  posts.py  reports.py  stickers.py  uploads.py  users.py
landing/: index.html
public/: manifest.webmanifest
src/: App.tsx  api.ts  i18n.ts  index.css  lite-md.tsx  mediaCompress.ts  messageMedia.ts  store.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/calls/: CallOverlay.tsx  CallsProvider.tsx  types.ts
src/components/: Avatar.tsx  AvatarBuilder.tsx  AvatarSVG.tsx  ChatComposer.tsx  EventChip.tsx  Icons.tsx  LinkPreview.tsx  Logo.tsx  MessageBubble.tsx  Modal.tsx  PasscodeLockGate.tsx  PollCard.tsx  QRCode.tsx  QRScanner.tsx  ReleaseBanner.tsx  ScreenHeader.tsx  StickerPicker.tsx  TabBar.tsx  Toast.tsx  TopBar.tsx  notify.ts  toast-bus.ts
src/crypto/: encoding.ts  idb.ts  identity.ts  outgoing.ts  session.ts  store.ts
src/data/: mockData.ts
src/screens/: CalendarScreen.tsx  ChatDetailScreen.tsx  ChatsLayout.tsx  ChatsScreen.tsx  GroupInfoScreen.tsx  InviteScreen.tsx  LoginScreen.tsx  MenuScreen.tsx  NewsScreen.tsx  NoteDetailScreen.tsx  (+9 more)
(+3 files in other folders)
