[project]
name = "docot-backend"
version = "0.1.0"
description = "Docot backend — messenger / calendar / notes / news (all-in-one)"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "bcrypt>=4.2",
  "pyjwt>=2.9",
  "python-multipart>=0.0.12",
  "websockets>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
